tests/paczka1/small_fuzzy/71429601.err
Error in line 3: 97uMqegTqPM S549 23,0
Error in line 2: cSx A776 92,5
Error in line 6: oigIP6 S549 31,2
Error in line 9: cSx A835 16,0
